--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@libsql/client": "0.14.0",
     "@libsql/win32-x64-msvc": "^0.4.7",
     "@napi-rs/system-ocr": "patch:@napi-rs/system-ocr@npm%3A1.0.2#~/.yarn/patches/@napi-rs-system-ocr-npm-1.0.2-59e7a78e8b.patch",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@strongtz/win32-arm64-msvc": "^0.4.7",
     "express": "^5.1.0",
     "font-list": "^2.0.0",
