--- a/package.json
+++ b/package.json
@@ -101,10 +101,10 @@
     "@agentic/exa": "^7.3.3",
     "@agentic/searxng": "^7.3.3",
     "@agentic/tavily": "^7.3.3",
-    "@ai-sdk/amazon-bedrock": "^3.0.35",
-    "@ai-sdk/google-vertex": "^3.0.40",
-    "@ai-sdk/mistral": "^2.0.19",
-    "@ai-sdk/perplexity": "^2.0.13",
+    "@ai-sdk/amazon-bedrock": "^4.0.0-beta.38",
+    "@ai-sdk/google-vertex": "^4.0.0-beta.42",
+    "@ai-sdk/mistral": "^3.0.0-beta.21",
+    "@ai-sdk/perplexity": "^3.0.0-beta.20",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@anthropic-ai/sdk": "^0.41.0",
     "@anthropic-ai/vertex-sdk": "patch:@anthropic-ai/vertex-sdk@npm%3A0.11.4#~/.yarn/patches/@anthropic-ai-vertex-sdk-npm-0.11.4-c19cb41edb.patch",
@@ -112,7 +112,7 @@
     "@aws-sdk/client-bedrock-runtime": "^3.840.0",
     "@aws-sdk/client-s3": "^3.840.0",
     "@biomejs/biome": "2.2.4",
-    "@cherrystudio/ai-core": "workspace:^1.0.0-alpha.18",
+    "@cherrystudio/ai-core": "workspace:^1.0.2",
     "@cherrystudio/embedjs": "^0.1.31",
     "@cherrystudio/embedjs-libsql": "^0.1.31",
     "@cherrystudio/embedjs-loader-csv": "^0.1.31",
@@ -223,7 +223,7 @@
     "@viz-js/lang-dot": "^1.0.5",
     "@viz-js/viz": "^3.14.0",
     "@xyflow/react": "^12.4.4",
-    "ai": "^5.0.68",
+    "ai": "^6.0.0-beta.66",
     "antd": "patch:antd@npm%3A5.27.0#~/.yarn/patches/antd-npm-5.27.0-aa91c36546.patch",
     "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
@@ -361,7 +361,7 @@
     "yjs": "^13.6.27",
     "youtubei.js": "^15.0.1",
     "zipread": "^1.3.3",
-    "zod": "^4.1.5"
+    "zod": "^4.1.12"
   },
   "resolutions": {
     "@codemirror/language": "6.11.3",
@@ -385,13 +385,13 @@
     "undici": "6.21.2",
     "vite": "npm:rolldown-vite@7.1.5",
     "tesseract.js@npm:*": "patch:tesseract.js@npm%3A6.0.1#~/.yarn/patches/tesseract.js-npm-6.0.1-2562a7e46d.patch",
-    "@ai-sdk/google@npm:2.0.20": "patch:@ai-sdk/google@npm%3A2.0.20#~/.yarn/patches/@ai-sdk-google-npm-2.0.20-b9102f9d54.patch",
     "@img/sharp-darwin-arm64": "0.34.3",
     "@img/sharp-darwin-x64": "0.34.3",
     "@img/sharp-linux-arm": "0.34.3",
     "@img/sharp-linux-arm64": "0.34.3",
     "@img/sharp-linux-x64": "0.34.3",
-    "@img/sharp-win32-x64": "0.34.3"
+    "@img/sharp-win32-x64": "0.34.3",
+    "@ai-sdk/google@npm:3.0.0-beta.27": "patch:@ai-sdk/google@npm%3A3.0.0-beta.27#~/.yarn/patches/@ai-sdk-google-npm-3.0.0-beta.27-8900c301e6.patch"
   },
   "packageManager": "yarn@4.9.1",
   "lint-staged": {
