--- a/packages/aiCore/package.json
+++ b/packages/aiCore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cherrystudio/ai-core",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Cherry Studio AI Core - Unified AI Provider Interface Based on Vercel AI SDK",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -36,15 +36,16 @@
     "ai": "^5.0.26"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^2.0.27",
-    "@ai-sdk/azure": "^2.0.49",
-    "@ai-sdk/deepseek": "^1.0.23",
-    "@ai-sdk/openai": "^2.0.48",
-    "@ai-sdk/openai-compatible": "^1.0.22",
-    "@ai-sdk/provider": "^2.0.0",
-    "@ai-sdk/provider-utils": "^3.0.12",
-    "@ai-sdk/xai": "^2.0.26",
-    "zod": "^4.1.5"
+    "@ai-sdk/anthropic": "^3.0.0-beta.34",
+    "@ai-sdk/azure": "^3.0.0-beta.34",
+    "@ai-sdk/deepseek": "^2.0.0-beta.21",
+    "@ai-sdk/google": "patch:@ai-sdk/google@npm%3A3.0.0-beta.27#~/.yarn/patches/@ai-sdk-google-npm-3.0.0-beta.27-8900c301e6.patch",
+    "@ai-sdk/openai": "^3.0.0-beta.34",
+    "@ai-sdk/openai-compatible": "^2.0.0-beta.21",
+    "@ai-sdk/provider": "^3.0.0-beta.8",
+    "@ai-sdk/provider-utils": "^4.0.0-beta.20",
+    "@ai-sdk/xai": "^3.0.0-beta.22",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "tsdown": "^0.12.9",
