--- a/package.json
+++ b/package.json
@@ -129,8 +129,8 @@
     "@cherrystudio/embedjs-ollama": "^0.1.31",
     "@cherrystudio/embedjs-openai": "^0.1.31",
     "@cherrystudio/extension-table-plus": "workspace:^",
-    "@cherrystudio/ui": "workspace:*",
     "@cherrystudio/openai": "^6.5.0",
+    "@cherrystudio/ui": "workspace:*",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -283,6 +283,7 @@
     "htmlparser2": "^10.0.0",
     "husky": "^9.1.7",
     "i18next": "^23.11.5",
+    "i18next-scanner": "^4.6.0",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.2.0",
     "isbinaryfile": "5.0.4",
