refactor(i18n): standardize i18n script names and update base locale
- Rename i18n-related scripts to follow consistent naming pattern (i18n:check, i18n:sync, i18n:auto)
- Change default base locale from zh-cn to en-us
- Remove unused update-i18n.ts script
- Update documentation and CI workflow to reflect script name changes

--- a/package.json
+++ b/package.json
@@ -54,10 +54,9 @@
     "typecheck:node": "tsgo --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "tsgo --noEmit -p tsconfig.web.json --composite false",
     "typecheck:ui": "cd packages/ui && npm run type-check",
-    "check:i18n": "dotenv -e .env -- tsx scripts/check-i18n.ts",
-    "sync:i18n": "dotenv -e .env -- tsx scripts/sync-i18n.ts",
-    "update:i18n": "dotenv -e .env -- tsx scripts/update-i18n.ts",
-    "auto:i18n": "dotenv -e .env -- tsx scripts/auto-translate-i18n.ts",
+    "i18n:check": "dotenv -e .env -- tsx scripts/check-i18n.ts",
+    "i18n:sync": "dotenv -e .env -- tsx scripts/sync-i18n.ts",
+    "i18n:auto": "dotenv -e .env -- tsx scripts/auto-translate-i18n.ts",
     "update:languages": "tsx scripts/update-languages.ts",
     "test": "vitest run --silent",
     "test:main": "vitest run --project main",
@@ -69,7 +68,7 @@
     "test:e2e": "yarn playwright test",
     "test:lint": "oxlint --deny-warnings && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --cache",
     "test:scripts": "vitest scripts",
-    "lint": "oxlint --fix && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --cache && biome lint --write && biome format --write && yarn typecheck && yarn check:i18n && yarn format:check",
+    "lint": "oxlint --fix && eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --cache && biome lint --write && biome format --write && yarn typecheck && yarn i18n:check && yarn format:check",
     "lint:ox": "oxlint --fix && biome lint --write && biome format --write",
     "format": "biome format --write && biome lint --write",
     "format:check": "biome format && biome lint",
