feat(i18n): add i18next scanner configuration and script
Add i18next-scanner configuration file to automate translation key extraction
Include new 'i18n:scan' script in package.json to run the scanner
Update tsconfig and oxlintrc to include the new config file

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "i18n:check": "dotenv -e .env -- tsx scripts/check-i18n.ts",
     "i18n:sync": "dotenv -e .env -- tsx scripts/sync-i18n.ts",
     "i18n:auto": "dotenv -e .env -- tsx scripts/auto-translate-i18n.ts",
+    "i18n:scan": "i18next-scanner && yarn format",
     "update:languages": "tsx scripts/update-languages.ts",
     "test": "vitest run --silent",
     "test:main": "vitest run --project main",
