--- a/package.json
+++ b/package.json
@@ -283,6 +283,7 @@
     "htmlparser2": "^10.0.0",
     "husky": "^9.1.7",
     "i18next": "^23.11.5",
+    "i18next-cli": "^1.11.14",
     "i18next-scanner": "^4.6.0",
     "iconv-lite": "^0.6.3",
     "ipaddr.js": "^2.2.0",
