--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,7 +27,8 @@
     "source.fixAll.biome": "explicit",
     "source.fixAll.eslint": "explicit",
     "source.fixAll.oxc": "explicit",
-    "source.organizeImports": "never"
+    "source.organizeImports": "never",
+    "source.sort.json": "always"
   },
   "editor.formatOnSave": true,
   "files.associations": {
@@ -43,7 +44,6 @@
   "i18n-ally.keystyle": "nested", // 翻译路径格式
   "i18n-ally.localesPaths": ["src/renderer/src/i18n/locales"],
   "i18n-ally.namespace": true, // 开启命名空间
-  "i18n-ally.sortKeys": true, // 排序
   "i18n-ally.sourceLanguage": "zh-cn", // 翻译源语言
   "i18n-ally.usage.derivedKeyRules": ["{key}_one", "{key}_other"], // 标记单复数形式的键为已翻译
   "search.exclude": {
