--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
     "source.fixAll.eslint": "explicit",
     "source.fixAll.oxc": "explicit",
     "source.organizeImports": "never",
-    "source.sort.json": "always"
+    "source.sort.json.biome": "always"
   },
   "editor.formatOnSave": true,
   "files.associations": {
@@ -38,14 +38,26 @@
   "files.eol": "\n",
   "i18n-ally.defaultNamespace": "translation",
   // "i18n-ally.displayLanguage": "zh-cn", // 界面显示语言
-  "i18n-ally.enabledFrameworks": ["react-i18next", "i18next"],
-  "i18n-ally.enabledParsers": ["ts", "js", "json"], // 解析语言
+  "i18n-ally.enabledFrameworks": [
+    "react-i18next",
+    "i18next"
+  ],
+  "i18n-ally.enabledParsers": [
+    "ts",
+    "js",
+    "json"
+  ], // 解析语言
   "i18n-ally.fullReloadOnChanged": true,
   "i18n-ally.keystyle": "nested", // 翻译路径格式
-  "i18n-ally.localesPaths": ["src/renderer/src/i18n/locales"],
+  "i18n-ally.localesPaths": [
+    "src/renderer/src/i18n/locales"
+  ],
   "i18n-ally.namespace": true, // 开启命名空间
   "i18n-ally.sourceLanguage": "zh-cn", // 翻译源语言
-  "i18n-ally.usage.derivedKeyRules": ["{key}_one", "{key}_other"], // 标记单复数形式的键为已翻译
+  "i18n-ally.usage.derivedKeyRules": [
+    "{key}_one",
+    "{key}_other"
+  ], // 标记单复数形式的键为已翻译
   "search.exclude": {
     ".yarn/releases/**": true,
     "**/dist/**": true
