--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "typecheck:web": "tsgo --noEmit -p tsconfig.web.json --composite false",
     "typecheck:ui": "cd packages/ui && npm run type-check",
     "i18n:check": "dotenv -e .env -- tsx scripts/check-i18n.ts",
-    "i18n:sync": "dotenv -e .env -- tsx scripts/sync-i18n.ts",
+    "i18n:sync": "i18next-cli sync",
     "i18n:auto": "dotenv -e .env -- tsx scripts/auto-translate-i18n.ts",
     "i18n:status": "i18next-cli status",
     "i18n:extract": "i18next-cli extract",
