--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,11 +32,11 @@
   },
   "editor.formatOnSave": true,
   "files.associations": {
-    "*.css": "tailwindcss",
-    ".oxlintrc.json": "jsonc"
+    ".oxlintrc.json": "jsonc",
+    "*.css": "tailwindcss"
   },
   "files.eol": "\n",
-  "i18n-ally.defaultNamespace": "translation",
+  // "i18n-ally.defaultNamespace": "translation",
   // "i18n-ally.displayLanguage": "zh-cn", // 界面显示语言
   "i18n-ally.enabledFrameworks": [
     "react-i18next",
