--- a/package.json
+++ b/package.json
@@ -168,21 +168,22 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@tiptap/extension-collaboration": "^3.2.0",
-    "@tiptap/extension-drag-handle": "patch:@tiptap/extension-drag-handle@npm%3A3.2.0#~/.yarn/patches/@tiptap-extension-drag-handle-npm-3.2.0-5a9ebff7c9.patch",
-    "@tiptap/extension-drag-handle-react": "^3.2.0",
-    "@tiptap/extension-image": "^3.2.0",
-    "@tiptap/extension-list": "^3.2.0",
-    "@tiptap/extension-mathematics": "^3.2.0",
-    "@tiptap/extension-mention": "^3.2.0",
-    "@tiptap/extension-node-range": "^3.2.0",
-    "@tiptap/extension-table-of-contents": "^3.2.0",
-    "@tiptap/extension-typography": "^3.2.0",
-    "@tiptap/extension-underline": "^3.2.0",
-    "@tiptap/pm": "^3.2.0",
-    "@tiptap/react": "^3.2.0",
-    "@tiptap/starter-kit": "^3.2.0",
-    "@tiptap/suggestion": "^3.2.0",
+    "@tiptap/extension-collaboration": "^3.7.2",
+    "@tiptap/extension-drag-handle": "^3.7.2",
+    "@tiptap/extension-drag-handle-react": "^3.7.2",
+    "@tiptap/extension-image": "^3.7.2",
+    "@tiptap/extension-list": "^3.7.2",
+    "@tiptap/extension-mathematics": "^3.7.2",
+    "@tiptap/extension-mention": "^3.7.2",
+    "@tiptap/extension-node-range": "^3.7.2",
+    "@tiptap/extension-table-of-contents": "^3.7.2",
+    "@tiptap/extension-typography": "^3.7.2",
+    "@tiptap/extension-underline": "^3.7.2",
+    "@tiptap/markdown": "^3.7.2",
+    "@tiptap/pm": "^3.7.2",
+    "@tiptap/react": "^3.7.2",
+    "@tiptap/starter-kit": "^3.7.2",
+    "@tiptap/suggestion": "^3.7.2",
     "@tiptap/y-tiptap": "^3.0.0",
     "@truto/turndown-plugin-gfm": "^1.0.2",
     "@tryfabric/martian": "^1.2.4",
