--- a/package.json
+++ b/package.json
@@ -394,7 +394,8 @@
     "@img/sharp-linux-arm64": "0.34.3",
     "@img/sharp-linux-x64": "0.34.3",
     "@img/sharp-win32-x64": "0.34.3",
-    "openai@npm:5.12.2": "npm:@cherrystudio/openai@6.5.0"
+    "openai@npm:5.12.2": "npm:@cherrystudio/openai@6.5.0",
+    "@tiptap/extension-code@npm:^3.7.2": "patch:@tiptap/extension-code@npm%3A3.7.2#~/.yarn/patches/@tiptap-extension-code-npm-3.7.2-90eeabbd8a.patch"
   },
   "packageManager": "yarn@4.9.1",
   "lint-staged": {
