--- a/package.json
+++ b/package.json
@@ -169,21 +169,23 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@tiptap/extension-code-block": "^3.9.0",
     "@tiptap/extension-collaboration": "^3.7.2",
     "@tiptap/extension-drag-handle": "^3.7.2",
     "@tiptap/extension-drag-handle-react": "^3.7.2",
     "@tiptap/extension-image": "^3.7.2",
+    "@tiptap/extension-link": "^3.9.0",
     "@tiptap/extension-list": "^3.7.2",
     "@tiptap/extension-mathematics": "^3.7.2",
     "@tiptap/extension-mention": "^3.7.2",
     "@tiptap/extension-node-range": "^3.7.2",
-    "@tiptap/extension-table-of-contents": "^3.7.2",
+    "@tiptap/extension-table-of-contents": "patch:@tiptap/extension-table-of-contents@npm%3A3.7.2#~/.yarn/patches/@tiptap-extension-table-of-contents-npm-3.7.2-e6043db70e.patch",
     "@tiptap/extension-typography": "^3.7.2",
     "@tiptap/extension-underline": "^3.7.2",
     "@tiptap/markdown": "patch:@tiptap/markdown@npm%3A3.7.2#~/.yarn/patches/@tiptap-markdown-npm-3.7.2-165301ab30.patch",
     "@tiptap/pm": "^3.7.2",
-    "@tiptap/react": "^3.7.2",
-    "@tiptap/starter-kit": "^3.7.2",
+    "@tiptap/react": "^3.9.0",
+    "@tiptap/starter-kit": "^3.9.0",
     "@tiptap/suggestion": "^3.7.2",
     "@tiptap/y-tiptap": "^3.0.0",
     "@truto/turndown-plugin-gfm": "^1.0.2",
