Upgrade TipTap dependencies to v3.9.0 and fix task list styling
- Update all TipTap packages from v3.7.2 to v3.9.0 including extensions and patch files
- Fix task list alignment and nested checked item styling to prevent inheritance issues
- Remove Tab key handler from code block extension and add patch-package dependency

--- a/package.json
+++ b/package.json
@@ -170,23 +170,23 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@tiptap/extension-code-block": "^3.9.0",
-    "@tiptap/extension-collaboration": "^3.7.2",
-    "@tiptap/extension-drag-handle": "^3.7.2",
-    "@tiptap/extension-drag-handle-react": "^3.7.2",
-    "@tiptap/extension-image": "^3.7.2",
+    "@tiptap/extension-collaboration": "^3.9.0",
+    "@tiptap/extension-drag-handle": "^3.9.0",
+    "@tiptap/extension-drag-handle-react": "^3.9.0",
+    "@tiptap/extension-image": "^3.9.0",
     "@tiptap/extension-link": "^3.9.0",
-    "@tiptap/extension-list": "^3.7.2",
-    "@tiptap/extension-mathematics": "^3.7.2",
-    "@tiptap/extension-mention": "^3.7.2",
-    "@tiptap/extension-node-range": "^3.7.2",
-    "@tiptap/extension-table-of-contents": "patch:@tiptap/extension-table-of-contents@npm%3A3.7.2#~/.yarn/patches/@tiptap-extension-table-of-contents-npm-3.7.2-e6043db70e.patch",
-    "@tiptap/extension-typography": "^3.7.2",
-    "@tiptap/extension-underline": "^3.7.2",
-    "@tiptap/markdown": "patch:@tiptap/markdown@npm%3A3.7.2#~/.yarn/patches/@tiptap-markdown-npm-3.7.2-165301ab30.patch",
-    "@tiptap/pm": "^3.7.2",
+    "@tiptap/extension-list": "^3.9.0",
+    "@tiptap/extension-mathematics": "^3.9.0",
+    "@tiptap/extension-mention": "^3.9.0",
+    "@tiptap/extension-node-range": "^3.9.0",
+    "@tiptap/extension-table-of-contents": "patch:@tiptap/extension-table-of-contents@npm%3A3.9.0#~/.yarn/patches/@tiptap-extension-table-of-contents-npm-3.9.0-98de0a0e34.patch",
+    "@tiptap/extension-typography": "^3.9.0",
+    "@tiptap/extension-underline": "^3.9.0",
+    "@tiptap/markdown": "patch:@tiptap/markdown@npm%3A3.9.0#~/.yarn/patches/@tiptap-markdown-npm-3.9.0-16e287adb3.patch",
+    "@tiptap/pm": "^3.9.0",
     "@tiptap/react": "^3.9.0",
     "@tiptap/starter-kit": "^3.9.0",
-    "@tiptap/suggestion": "^3.7.2",
+    "@tiptap/suggestion": "^3.9.0",
     "@tiptap/y-tiptap": "^3.0.0",
     "@truto/turndown-plugin-gfm": "^1.0.2",
     "@tryfabric/martian": "^1.2.4",
@@ -305,6 +305,7 @@
     "oxlint": "^1.22.0",
     "oxlint-tsgolint": "^0.2.0",
     "p-queue": "^8.1.0",
+    "patch-package": "^8.0.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "playwright": "^1.55.1",
@@ -397,7 +398,8 @@
     "@img/sharp-linux-x64": "0.34.3",
     "@img/sharp-win32-x64": "0.34.3",
     "openai@npm:5.12.2": "npm:@cherrystudio/openai@6.5.0",
-    "@tiptap/extension-code@npm:^3.7.2": "patch:@tiptap/extension-code@npm%3A3.7.2#~/.yarn/patches/@tiptap-extension-code-npm-3.7.2-90eeabbd8a.patch"
+    "@tiptap/extension-code@npm:^3.7.2": "patch:@tiptap/extension-code@npm%3A3.7.2#~/.yarn/patches/@tiptap-extension-code-npm-3.7.2-90eeabbd8a.patch",
+    "@tiptap/extension-code@npm:^3.9.0": "patch:@tiptap/extension-code@npm%3A3.9.0#~/.yarn/patches/@tiptap-extension-code-npm-3.9.0-1fad1fecd8.patch"
   },
   "packageManager": "yarn@4.9.1",
   "lint-staged": {
