--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "@opeoginni/github-copilot-openai-compatible": "0.1.19",
     "@playwright/test": "^1.52.0",
     "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-switch": "^1.2.6",
     "@reduxjs/toolkit": "^2.2.5",
     "@shikijs/markdown-it": "^3.12.0",
     "@swc/plugin-styled-components": "^8.0.4",
