--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -125,9 +125,10 @@
       "require": "./dist/utils/index.js",
       "default": "./dist/utils/index.js"
     },
-    "./styles/design-tokens.css": "./src/styles/design-tokens.css",
+    "./styles": "./src/styles/index.css",
+    "./styles/tokens.css": "./src/styles/tokens.css",
     "./styles/theme.css": "./src/styles/theme.css",
-    "./styles/globals.css": "./src/styles/globals.css"
+    "./styles/index.css": "./src/styles/index.css"
   },
   "packageManager": "yarn@4.9.1"
 }
