🐛 fix: resolve cherryin provider lint errors and web search config
- Add fetch global variable declaration for ai-sdk-provider in oxlintrc
- Fix endpoint_type mapping fallback logic in cherryin provider
- Add error handling comment for better code readability

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -53,6 +53,12 @@
         "node": true
       },
       "files": ["src/preload/**"]
+    },
+    {
+      "files": ["packages/ai-sdk-provider/**"],
+      "globals": {
+        "fetch": "readonly"
+      }
     }
   ],
   // We don't use the React plugin here because its behavior differs slightly from that of ESLint's React plugin.
